Added persistant JSON support

--- a/public/index.html
+++ b/public/index.html
@@ -16,10 +16,13 @@
                     <a href="/">Home</a>
             </li>
             <li>
-                <a href="addHotel.html">Add Hotel</a>
+                <a href="addHotel.html">    Add Hotel
+                </a>
             </li>
             <li>
-                View All Hotels
+                <a href="/list-hotels">
+                    View All Hotels
+                </a>
             </li>
         </ul>
     </nav>
