--- a/public/addHotel.html
+++ b/public/addHotel.html
@@ -19,7 +19,9 @@
                 <a href="addHotel.html">Add Hotel</a>
             </li>
             <li>
-                View All Hotels
+                    <a href="/list-hotels">
+                        View All Hotels
+                    </a>
             </li>
         </ul>
     </nav>
